--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="canonical" href="https://mzs21.github.io/calculator" />
 
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
 
     <title>Basic Calculator</title>
   </head>
